[project]
name = "andale"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"


dependencies = [
  "andale",
    "python-whois==0.7.3",
    "python-libnmap==0.7.2",
    "dnspython[trio]",
    "playwright",
    "timeflake",
    "orjson",
    "msgpack",
    "celery==5.0.5",
    "gevent",
    "flower",
    "aiodocker",
    "ruamel.yaml==0.17.5",
    "jsonschema==3.2.0",
    "ipwhois==1",
    "jmespath",
    "jinja2_ansible_filters",
    "peewee",
    "pydantic"
]

dev-dependencies = [
  "pytest",
  "pytest-asyncio"
]


[tool.uv.sources]
andale = { path = "andale" }


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
pythonpath = "src"
asyncio_default_fixture_loop_scope = "session"
asyncio_mode = "auto" 