[project]
name = "andale"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"


dependencies = [
  "andale",
    "python-whois==0.7.3",
    "python-libnmap==0.7.2",
    "dnspython[trio]==2.6.1",
    "playwright==1.46.0",
    "timeflake==0.4.3",
    "orjson==3.10.7",
    "msgpack==1.1.0",
    "celery==5.0.5",
    "gevent==24.2.1",
    "flower==2.0.1",
    "aiodocker==0.22.2",
    "ruamel.yaml==0.18.6",
    "jsonschema==4.23.0",
    "ipwhois",
    "jmespath==1.0.1",
    "jinja2-ansible-filters==1.3.2",
    "peewee==3.17.6",
    "pydantic==2.9.1",
    "xmltodict==0.13.0",
    "beautifulsoup4==4.12.3",
]

dev-dependencies = [
  "pytest",
  "pytest-asyncio"
]


[tool.uv.sources]
andale = { path = "andale" }


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
pythonpath = "src"
asyncio_default_fixture_loop_scope = "session"
asyncio_mode = "auto" 